--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,7 +1,13 @@
 .Person {
   width: 60%;
   margin: 16px auto;
-  border: 1px solid #eee;
+  border: 1px solid rgb(49, 49, 49);
   box-shadow: 16px;
   text-align: center;
 }
+
+/* @media (min-width:500px){
+  .Person{
+     width: "450px"
+  }
+} */
